# 8sync

./: Makefile.am  configure.ac  guix.scm
8sync/systems/: web.scm
8sync/systems/websocket/: frame.scm  server.scm
doc/: 8sync.texi
tests/: test-actors.scm  test-agenda.scm
